--- a/app/src/main/res/layout/activity_shop_item_changes.xml
+++ b/app/src/main/res/layout/activity_shop_item_changes.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ShopItemActivityChanges">
+    tools:context=".presentation.ShopItemActivity">
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/titleName"
+        android:id="@+id/titleNameLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/titleCount"
+        app:layout_constraintBottom_toTopOf="@+id/titleCountLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/titleCount"
+        android:id="@+id/titleCountLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleName">
+        app:layout_constraintTop_toBottomOf="@+id/titleNameLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputCount"
