--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <variable
+            name="shopItem"
+            type="com.annalech.listofproducts.domain.ShopItem" />
+    </data>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -30,6 +36,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="Товар XXXX"
+            android:text="@{shopItem.name}"
             />
 
         <TextView
@@ -39,7 +46,9 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/white"
-            tools:text="N"/>
+            tools:text="N"
+            android:text="@{String.valueOf(shopItem.count)}"
+            />
 
 
 
