--- a/app/src/main/res/layout/item_shop_enable.xml
+++ b/app/src/main/res/layout/item_shop_enable.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
+    <data>
+        <variable
+            name="shopItem"
+            type="com.annalech.listofproducts.domain.ShopItem" />
+    </data>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,16 +38,18 @@
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="Товар XXXX"
+            android:text="@{shopItem.name}"
             />
 
         <TextView
             android:id="@+id/item_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:textColor="@color/white"
-            tools:text="N"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="N"
+            android:text="@{String.valueOf(shopItem.count)}"/>
 
 
 
